Fix order (again) of extension table columns in downloads.
#402 again.